# os

./: CMakeLists.txt  README.md  startproject.c
doc/policeandthief/: 过程.wsd
driver/: CMakeLists.txt  mydriver.c  mytest.c  root@192.168.57.3
driver/src/: matrix.c  test.c
floppy/: floppy.img
matrix/: CMakeLists.txt  matrix.c
memorymanage/: CMakeLists.txt
memorymanage/src/: memorymanage.c
mymenu/: CMakeLists.txt
mymenu/src/: menu.c  minimenu.c  minimenu.h  miniwindow.c  miniwindow.h  stdntutn.h
myshell/: CMakeLists.txt
myshell/src/: internalCommand.c  internalCommand.h  myshell.c  stdntutn.h  stringUtil.c  stringUtil.h
mystring/: CMakeLists.txt  mystring.c
philosopher/: CMakeLists.txt  philosopher.c
policeandthief/: CMakeLists.txt
policeandthief/src/: miniwindow.c  policeandthief.c  stdntutn.h
process/: CMakeLists.txt
process/3_pipe/: pipe.c
useroperation/: adduser.sh  deluser.sh
